--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
       </ul>
     </div>
   </nav>
-  <p>Copyright %#169; 2024 Aridaman Singh. All Rights Reserved.</p>
+  <p>Copyright © 2024 Aridaman Singh. All Rights Reserved.</p>
 </footer>
 
     <script src="script.js"></script>
